--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Ylla Space</title>
     <link rel="stylesheet" href="master.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +13,11 @@
   </head>
   <body>
 
-    <img class="logo-image" src="logo.png">
+    <h1 style="text-align: center; margin-top: 6%;" class="main-text">Ylla Space</h1>
 
-    <h1 style="text-align: center;" class="main-text">The first railgun into space</h1>
+    <img class="animate__flash logo-image" src="logo.png">
+
+    <h2 style="text-align: center;" class="main-text">The first railgun into space</h2>
 
     <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="main-text">About: Our Mission. Our Vission.</h3>
 
