--- a/index.html
+++ b/index.html
@@ -13,17 +13,36 @@
   </head>
   <body>
 
-    <h1 style="text-align: center; margin-top: 6%;" class="main-text">Ylla Space</h1>
+    <h1 style="text-align: center; margin-top: 4%;" class="main-text">Ylla Space</h1>
 
     <img class="animate__flash logo-image" src="logo.png">
 
-    <h2 style="text-align: center;" class="main-text">The first railgun into space</h2>
+    <h2 style="text-align: center;" class="main-text">Building the most advanced space launch system with the first railgun into space</h2>
 
-    <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="main-text">About: Our Mission. Our Vission.</h3>
+    <div class="about-section" style="background-image: url(waves.jpg); padding: 2%; margin-top: 4%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">About: Our Mission. Our Vission.</h3>
 
-    <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="main-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of railguns to shoot small satellites or equipment into space.<br><br>In our dream world space exploration is powered by electromagnets.<br><br>At the moment we are working on a railgun simulator that will help us build the perfect and most efficient railgun, that matches our desired max payload requirements.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads and make the use of chemical engines more efficient in thinner air.<br><br>In our dream world, electromagnets lead the way for space exploration.<br><br>Today, we are working on a railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
+    </div>
 
-    <h5 class="main-text" style="text-align:center; margin-bottom: 6%;"><a href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">contact</a></h5>
+    <div class="about-section" style="background-image: url(desert.jpg); padding: 2%; margin-top: 8%; margin-bottom: 8%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Pod</h3>
+
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. It will be able to deliver payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, electromagnetic propulsion will carry it into orbit. This electromagnetic propulsion system will help the pod land back on earth to be ready for reusability.</h4>
+    </div>
+
+    <div class="about-section" style="background-image: url(iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 8%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Launcher</h3>
+
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where electromagnetic propulsion is more efficient. Our goal is to make space fully electric with the combination of the railgun launching system and the rail pod.</h4>
+    </div>
+
+    <nav class="navbar navbar-expand-lg bg-dark" style="padding: 1%">
+      <div class="container-md">
+        <h5 class="main-text"><a href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">contact</a></h5>
+        <h5 class="main-text"><a href="https://twitter.com/YllaSpace">twitter</a></h5>
+      </div>
+    </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
