--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="about-section" style="background-image: url(desert.jpg); padding: 2%; margin-top: 8%; margin-bottom: 8%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Pod</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. It will be able to deliver payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, electromagnetic propulsion will carry it into orbit. This electromagnetic propulsion system will help the pod land back on earth to be ready for reusability.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. Think of the rail pod as a cocoon that protects the payload from the extreme heat of orbital exit and re-entry. It will be able to deliver the payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, electromagnetic propulsion will carry it into orbit. This electromagnetic propulsion system will help the pod land back on earth to be ready for reusability.</h4>
     </div>
 
     <div class="about-section" style="background-image: url(iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 8%; background-attachment: fixed; background-position: center;">
