--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads and make the use of chemical engines more efficient in thinner air.<br><br>In our dream world, electromagnets lead the way for space exploration.<br><br>Today, we are working on a railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
     </div>
 
+    <div class="about-section" style="background-color: black; padding: 5%; margin-top: 7%; margin-bottom: 3%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 1%; margin-left: 4%; margin-bottom: 4%;" class="section-text">Launching System</h3>
+
+      <img src="dream.png" alt="" style="height: 60%; width: 70%; display: block; margin-left: auto; margin-right: auto;">
+    </div>
+
+
     <div class="about-section" style="background-image: url(desert.jpg); padding: 2%; margin-top: 10%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Pod</h3>
 
