--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="about-section" style="background-image: url(waves.jpg); padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">About: Our Mission. Our Vission.</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads and make the use of chemical engines more efficient in thinner air.<br><br>In our dream world, electromagnets lead the way for space exploration.<br><br>Today, we are working on a railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs a few hundred dollars per Kg, or even in the two-digit numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we are working on a railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
     </div>
 
     <div class="about-section" style="background-color: black; padding: 5%; margin-top: 7%; margin-bottom: 3%; background-attachment: fixed; background-position: center;">
@@ -35,13 +35,13 @@
     <div class="about-section" style="background-image: url(desert.jpg); padding: 2%; margin-top: 10%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Pod</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. Think of the rail pod as a cocoon that protects the payload from the extreme heat of orbital exit and re-entry. It will be able to deliver the payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, electromagnetic propulsion will carry it into orbit. This electromagnetic propulsion system will help the pod land back on earth to be ready for reusability.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. Think of the rail pod as a cocoon that protects the payload from the extreme heat of orbital exit and re-entry. It will be able to deliver the payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, the rocket propulsion system will carry it into orbit. This rocket propulsion system will help the pod land back on earth to be ready for 100% reusability.</h4>
     </div>
 
     <div class="about-section" style="background-image: url(iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Launcher</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where electromagnetic propulsion is more efficient. Our goal is to make space fully electric with the combination of the railgun launching system and the rail pod.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where rocket propulsion is more efficient. Our goal is to lower the price per Kg to two-digit numbers, making space way cheaper and accessible through the combination of the railgun launching system and the rail pod.</h4>
     </div>
 
     <nav class="navbar navbar-expand-lg bg-dark" style="padding: 1%">
