--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
   </head>
   <body>
 
+    <ul class="nav justify-content-end main-text" style="margin: 2%">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="research.html">Research</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://twitter.com/YllaSpace">Twitter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">Contact</a>
+      </li>
+    </ul>
+
     <h1 style="text-align: center; margin-top: 4%;" class="main-text">Ylla Space</h1>
 
     <img class="animate__flash logo-image" src="logo.png">
@@ -22,7 +37,7 @@
     <div class="about-section" style="background-image: url(waves.jpg); padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">About: Our Mission. Our Vission.</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs a few hundred dollars per Kg, or even in the two-digit numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we are working on a railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of electromagnets to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs a few hundred dollars per Kg or even two-digit numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we have received the Medici grant from the 1517 fund to build our first two MVPs to perfect our railgun simulator to help us build the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
     </div>
 
     <div class="about-section" style="background-color: black; padding: 5%; margin-top: 7%; margin-bottom: 3%; background-attachment: fixed; background-position: center;">
