--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where rocket propulsion is more efficient. Our goal is to lower the price per Kg to two-digit numbers, making space way cheaper and accessible through the combination of the railgun launching system and the rail pod.</h4>
     </div>
 
+    <p align="center"><iframe src="https://yllaspace.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></p>
+
     <nav class="navbar navbar-expand-lg bg-dark" style="padding: 1%">
       <div class="container-md">
         <h5 class="main-text"><a href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">contact</a></h5>
