--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="index-body">
 
     <ul class="nav justify-content-end main-text" style="margin: 2%">
       <li class="nav-item">
