--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Ylla Space</title>
     <link rel="stylesheet" href="master.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="index-body">
 
@@ -28,35 +28,34 @@
       </li>
     </ul>
 
-    <h1 style="text-align: center; margin-top: 4%;" class="main-text">Ylla Space</h1>
+    <h1 style="text-align: center; margin-top: 4%;" class="ylla-text">Ylla Space</h1>
 
-    <img class="animate__flash logo-image" src="logo.png">
+    <img class="animate__flash logo-image" src="images/logo.png">
 
-    <h2 style="text-align: center;" class="main-text">Building the most advanced space launch system with the first railgun into space</h2>
+    <h2 style="text-align: center;" class="ylla-text">Building the most advanced space launch system with the first railgun into space</h2>
 
     <div style="padding:75% 0 0 0;position:relative; margin: 5% 5% 0 5%;"><iframe src="https://player.vimeo.com/video/744249100?h=c252424325&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="20" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ylla Space Trailer"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-    <div class="about-section" style="background-image: url(waves.jpg); padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">About: Our Mission. Our Vission.</h3>
+    <div class="about-section" style="background-image: url(images/waves.jpg); padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">About: Our Mission. Our Vission.</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient, affordable, and electric. Our goal is to use the power of railguns to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs a few hundred dollars per Kg or even two-digit numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we have received the Medici grant from the 1517 fund to build our first two MVPs to perfect our railgun simulator to help us build the most efficient railgun that matches industry-standard payload requirements.</h4>
+      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient and affordable. Our goal is to use the power of railguns to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs tens of dollars numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we are building the first generation of our railgun to perfect our railgun simulator to help us create the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
     </div>
 
     <div class="about-section" style="background-color: black; padding: 5%; margin-top: 7%; margin-bottom: 3%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 1%; margin-left: 4%; margin-bottom: 4%;" class="section-text">Launching System</h3>
+      <h3 style="margin-top: 1%; margin-left: 4%; margin-bottom: 4%;" class="section-title">Launching System</h3>
 
-      <img src="dream.png" alt="" style="height: 60%; width: 70%; display: block; margin-left: auto; margin-right: auto;">
+      <img src="images/dream.png" alt="" style="height: 60%; width: 70%; display: block; margin-left: auto; margin-right: auto;">
     </div>
 
-
-    <div class="about-section" style="background-image: url(desert.jpg); padding: 2%; margin-top: 10%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Pod</h3>
+    <div class="about-section" style="background-image: url(images/desert.jpg); padding: 2%; margin-top: 10%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">The Rail Pod</h3>
 
       <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. Think of the rail pod as a cocoon that protects the payload from the extreme heat of orbital exit and re-entry. It will be able to deliver the payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, the rocket propulsion system will carry it into orbit. This rocket propulsion system will help the pod land back on earth to be ready for 100% reusability.</h4>
     </div>
 
-    <div class="about-section" style="background-image: url(iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-text">The Rail Launcher</h3>
+    <div class="about-section" style="background-image: url(images/iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
+      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">The Rail Launcher</h3>
 
       <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where rocket propulsion is more efficient. Our goal is to lower the price per Kg to two-digit numbers, making space way cheaper and accessible through the combination of the railgun launching system and the rail pod.</h4>
     </div>
