--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    </head>
   <body class="index-body">
 
-    <ul class="nav justify-content-end main-text" style="margin: 2%">
+    <ul class="nav justify-content-end main-text" style="margin: 2%;">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
       </li>
@@ -28,13 +30,21 @@
       </li>
     </ul>
 
-    <h1 style="text-align: center; margin-top: 4%;" class="ylla-text">Ylla Space</h1>
+    <div class="section-1">
+        <video class="video-section" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" style="">
+            <source src="images/trailer.mp4" type="video/mp4">
+        </video>
 
-    <img class="animate__flash logo-image" src="images/logo.png">
+      <div class="text-section">
+        <h1 style="text-align: center; margin-top: 2%;" class="ylla-text">Ylla Space</h1>
 
-    <h2 style="text-align: center;" class="ylla-text">Building the most advanced space launch system with the first railgun into space</h2>
+        <img class="animate__flash logo-image" src="images/logo.png">
 
-    <div style="padding:75% 0 0 0;position:relative; margin: 5% 5% 0 5%;"><iframe src="https://player.vimeo.com/video/744249100?h=c252424325&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="20" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ylla Space Trailer"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+        <h2 style="text-align: center;" class="ylla-text">Building the most advanced space launch system with the first railgun into space</h2>
+
+      </div>
+
+    </div>
 
     <div class="about-section" style="background-image: url(images/waves.jpg); padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
       <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">About: Our Mission. Our Vission.</h3>
@@ -42,32 +52,75 @@
       <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">Ylla Space, founded in 2022, is building the first railgun for orbital space transport. Our mission is to make space more efficient and affordable. Our goal is to use the power of railguns to shoot payloads into thinner air where the use of chemical propulsion is more efficient.<br><br>In our dream world, launching payloads into space costs tens of dollars numbers.<br><br>Tomorrow's economy will need constant transport to orbit, whether to satisfy the billion-dollar market of small satellites or re-supply space factories or hotels.<br><br>Today, we are building the first generation of our railgun to perfect our railgun simulator to help us create the perfect and most efficient railgun that matches industry-standard payload requirements.</h4>
     </div>
 
-    <div class="about-section" style="background-color: black; padding: 5%; margin-top: 7%; margin-bottom: 3%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 1%; margin-left: 4%; margin-bottom: 4%;" class="section-title">Launching System</h3>
+    <div class="section">
+        <div class="row">
+        <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <img src="images/launcherV1-2.png" style="width:100%" alt="">
+              <img src="images/launcherV1-1.png" style="width:100%" alt="">
+          </div>
+          <div class="col-2" style="border-left: 2px solid white; height: 500px;">
+          </div>
+          <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">Data Gathering V.1</h3>
 
-      <img src="images/dream.png" alt="" style="height: 60%; width: 70%; display: block; margin-left: auto; margin-right: auto;">
+            <h4 style="margin-top: 4%; margin-left: 4%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The first version of the orbital launching system will be 50cm long and launch a data-gathering device. This device will record essential data from the small-scale launcher to improve our simulations and help us advance in our research.</h4>
+          </div>
+        </div>
     </div>
 
-    <div class="about-section" style="background-image: url(images/desert.jpg); padding: 2%; margin-top: 10%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">The Rail Pod</h3>
+    <div class="section">
+        <div class="row">
+          <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">Solid Rocket V.2</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail pod is the vehicle for payload transportation into thinner air. Think of the rail pod as a cocoon that protects the payload from the extreme heat of orbital exit and re-entry. It will be able to deliver the payload safely into orbit and be ready for reuse for another mission. Once the rail pod reaches a certain altitude, where the air is thinner, the rocket propulsion system will carry it into orbit. This rocket propulsion system will help the pod land back on earth to be ready for 100% reusability.</h4>
+            <h4 style="margin-top: 4%; margin-left: 4%; margin-right: 6%; margin-bottom: 4%;" class="section-text">V.2 will be the first rocket to be accelerated by our OLS. It will be launched from our 50cm rail launcher and will record strategic data to improve our rail launcher. We will also test the limits of the launching system by doing extreme conditions testing.</h4>
+          </div>
+          <div class="col-2" style="border-left: 2px solid white; height: 500px;">
+          </div>
+          <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <img src="images/launcherV2-1.png" style="width:100%" alt="">
+          </div>
+        </div>
     </div>
 
-    <div class="about-section" style="background-image: url(images/iss.jpg); padding: 2%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
-      <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">The Rail Launcher</h3>
+    <div class="section">
+        <div class="row">
+          <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <img src="images/launcherV4-1.png" style="width:100%" alt="">
+          </div>
+          <div class="col-2" style="border-left: 2px solid white; height: 500px;">
+          </div>
+          <div class="col-5" class="about-section" style="padding: 2%; margin-top: 8%; margin-bottom: 4%; background-attachment: fixed; background-position: center;">
+            <h3 style="margin-top: 6%; margin-left: 4%; margin-bottom: 4%;" class="section-title">Liquid Rocket V.3</h3>
 
-      <h4 style="margin-top: 4%; margin-left: 6%; margin-right: 6%; margin-bottom: 4%;" class="section-text">The rail launcher is the launching system that will accelerate the rail pod to speeds of up to ~5000mph and carry it into thinner air where rocket propulsion is more efficient. Our goal is to lower the price per Kg to two-digit numbers, making space way cheaper and accessible through the combination of the railgun launching system and the rail pod.</h4>
+            <h4 style="margin-top: 4%; margin-left: 4%; margin-right: 6%; margin-bottom: 4%;" class="section-text">With V.3, we will launch a small liquid-propelled rocket marking the way into the new age of highly efficient OLS. This version will test out specific data concerning chamber pressure and specific impulse.</h4>
+          </div>
+        </div>
     </div>
 
-    <p align="center"><iframe src="https://yllaspace.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></p>
+    <div style="text-align: center;">
+      <a class="btn btn-outline-dark btn-lg" href="research.html" role="button">Our Research</a>
+    </div>
 
-    <nav class="navbar navbar-expand-lg bg-dark" style="padding: 1%">
-      <div class="container-md">
-        <h5 class="main-text"><a href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">contact</a></h5>
-        <h5 class="main-text"><a href="https://twitter.com/YllaSpace">twitter</a></h5>
-      </div>
-    </nav>
+    <div class="about-section" style="background-image: url(images/launcherV4.png); padding: 5%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
+      <p align="center"><iframe src="https://yllaspace.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></p>
+    </div>
+
+
+    <ul class="nav justify-content-end main-text" style="margin: 2%; padding:2%;">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="research.html">Research</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://twitter.com/YllaSpace">Twitter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">Contact</a>
+      </li>
+    </ul>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
