--- a/index.html
+++ b/index.html
@@ -15,32 +15,31 @@
     </head>
   <body class="index-body">
 
-    <ul class="nav justify-content-end main-text" style="margin: 2%;">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="research.html">Research</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/YllaSpace">Twitter</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">Contact</a>
-      </li>
-    </ul>
-
     <div class="section-1">
         <video class="video-section" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" style="">
             <source src="images/trailer.mp4" type="video/mp4">
         </video>
+        <ul class="nav justify-content-end main-text" style="margin: 2%;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="research.html">Research</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://twitter.com/YllaSpace">Twitter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mailto:gesino.tomas@gmail.com?subject=YllaSpace">Contact</a>
+          </li>
+        </ul>
 
       <div class="text-section">
         <h1 style="text-align: center; margin-top: 2%;" class="ylla-text">Ylla Space</h1>
 
         <img class="animate__flash logo-image" src="images/logo.png">
 
-        <h2 style="text-align: center;" class="ylla-text">Building the most advanced space launch system with the first railgun into space</h2>
+        <h2 style="text-align: center;" class="sub-text">Building railguns for orbital launching systems</h2>
 
       </div>
 
