--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <video class="video-section" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" style="">
             <source src="images/trailer.mp4" type="video/mp4">
         </video>
-        <ul class="nav justify-content-end main-text" style="margin: 2%;">
+        <ul class="nav justify-content-end main-text" style="">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
