--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a class="btn btn-outline-dark btn-lg" href="research.html" role="button">Our Research</a>
     </div>
 
-    <div class="about-section" style="background-image: url(images/launcherV4.png); padding: 5%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
+    <div class="about-section" style="background-color: black; padding: 5%; margin-top: 8%; margin-bottom: 10%; background-attachment: fixed; background-position: center;">
       <p align="center"><iframe src="https://yllaspace.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe></p>
     </div>
 
