--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <img class="animate__flash logo-image" src="images/logo.png">
 
-        <h2 style="text-align: center;" class="sub-text">Building railguns for orbital launching systems</h2>
+        <h2 style="text-align: center;" class="sub-text">Building electromagnetic orbital launching systems</h2>
 
       </div>
 
